# django-examples

./: .coveragerc  pyproject.toml
djangoexamples/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
projects/: models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
projects/tests/: test_views.py
templates/: index.html
users/: forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_is_email_confirmed_emailconfirmationtoken.py
users/templates/users/: confirm_email_view.html  login_view.html  logout_view.html  signup_view.html
users/tests/: test_views.py
